aulas-k8s/ingress/ingress.yaml
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: ingress-simples
#   labels:
#     app.kubernetes.io/name: ingress-simples
# spec:
#   ingressClassName: nginx
#   rules:
#   #- host: <Host>
#   - http:
#       paths:
#       - pathType: Prefix
#         path: /
#         backend:
#           service:
#             name: web-green
#             port: 
#               number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-path
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
  labels:
    app.kubernetes.io/name: ingress-path
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
        - path: /blue
          pathType: Prefix
          backend:
            service:
              name: web-blue
              port:
                number: 80
        - path: /green
          pathType: Prefix
          backend:
            service:
              name: web-green
              port:
                number: 80        
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-default
spec:  
  ingressClassName: nginx
  defaultBackend:
    service: 
      name: nginx
      port:
        number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-dominio
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx  
  rules:
    - host: color.danferreira.vip #- host: color.127.0.0.1.nip.io
      http:
        paths:
          - path: /blue
            pathType: Prefix
            backend:
              service:
                name: web-blue
                port:
                  number: 80
          - path: /green
            pathType: Prefix
            backend:
              service:
                name: web-green
                port:
                  number: 80
    - host: blue.danferreira.vip
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web-blue
                port:
                  number: 80                
    - host: green.danferreira.vip
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web-green
                port:
                  number: 80
